# YAOGLS

./: CMakeLists.txt  Main.cpp  README.md  Shaders.cpp  Shaders.hpp  Utils.cpp  Utils.hpp  VoxelGrid.cpp  VoxelGrid.hpp
Resources/: Shader.frag  Shader.vert  Voxel.vert
Resources/AssetsPack/: Blocks.yml  MANIFEST.yml
Resources/Shaders/: Floor.frag  Floor.vert  GridTile.vert  UI.frag  UI.vert  Voxel.frag  Voxel.vert
Source/: AssetsRegister.cpp  AssetsRegister.hpp  Main.cpp  VoxelGrid.cpp
Source/GL/: Misc.cpp  Misc.hpp  Shaders.cpp  Shaders.hpp
Source/GL/GLSL/: Matrix.hpp  Transformations.cpp  Transformations.hpp  Types.hpp  Vector2.hpp  Vector3.hpp
